<resources>
    <string name="app_name">Unit Converter</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="temperature">Temperature</string>
    <string name="weight">Weight</string>
    <string name="currency">Currency</string>
    <string name="calculator">Calculator</string>
    <string name="worldtime">WorldTime</string>
    <string name="enter_temperature">Enter temperature</string>
    <string name="convert">Convert</string>
    <string name="converted_value">Converted value:</string>
    <string name="select_time_zone">Select Time Zone</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="enter_weight_kg">Enter weight (kg)</string>
    <string name="enter_height_cm">Enter height (cm)</string>
    <string name="calculate_bmi">Calculate BMI</string>
    <string name="result">Result:</string>
    <string name="enter_weight">Enter weight</string>
    <string name="weight_converter">Weight Converter</string>
    <string name="currency_converter">Currency Converter</string>
    <string name="enter_amount">Enter amount</string>
    <string name="converted_amount">Converted Amount:</string>
    <string name="_0">0</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="division">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="clear">C</string>
    <string name="equalTo">=</string>
    <string name="add">+</string>
    <string name="length_converter">Length Converter</string>
    <string name="enter_length">Enter length</string>
    <string name="converted_length">Converted Length:</string>
    <string name="length">Length</string>
    <string name="bmi_calculator">BMI Calculator</string>
    <string name="your_bmi_will_be_displayed_here">Your BMI will be displayed here</string>
    <string name="bmi">BMI</string>
    <string name="bmi_result">BMI: </string>
    <string name="bmi_converter">BMI Converter</string>
    <string name="convert_to">Convert to:</string>
    <string name="temperature_converter">Temperature Converter</string>
    <string name="category">Category: </string>
    <string name="c">C</string>
    <string name="_brackets">()</string>
    <string name="_percentage">%</string>
    <string name="_divide">÷</string>
    <string name="_sub">-</string>
    <string name="_multiply">×</string>
    <string name="_Plus_minus">+/-</string>
    <string name="point">.</string>
</resources>