<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/unit_converter"
        android:textSize="24sp"
        android:textStyle="bold" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="10dp"
        android:rowCount="4">

        <Button
            android:id="@+id/btnTemperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/temperature" />

        <Button
            android:id="@+id/btnWeight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/weight" />

        <Button
            android:id="@+id/btnCurrency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/currency" />

        <Button
            android:id="@+id/btnBMI"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/bmi" />

        <Button
            android:id="@+id/btnCalculator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/calculator" />

        <Button
            android:id="@+id/btnWorldTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/worldtime" />

        <Button
            android:id="@+id/btnConvertLength"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="5dp"
            android:text="@string/length" />
    </GridLayout>

</LinearLayout>