<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length_converter"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/inputLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_length"
        android:inputType="numberDecimal"/>

    <Spinner
        android:id="@+id/spinnerLengthFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinnerLengthTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnConvertLength"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"/>

    <TextView
        android:id="@+id/tvLengthResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converted_length"
        android:textSize="18sp"
        android:layout_gravity="center"/>
</LinearLayout>
