<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency_converter"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/inputAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_amount"
        android:inputType="numberDecimal"/>

    <Spinner
        android:id="@+id/spinnerCurrencyFrom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Spinner
        android:id="@+id/spinnerCurrencyTo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnConvertCurrency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/convert"/>

    <TextView
        android:id="@+id/tvCurrencyResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/converted_amount"
        android:textSize="18sp"
        android:layout_gravity="center"/>
</LinearLayout>
